--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,14 @@
+[flake8]
+ignore = E501
+#E501 - line length too long
+
+exclude = 
+    .git,
+    *_pb2.py
+
+max-complexity = 5
+
+
 [pycodestyle]
 ignore=E203,E501,W503
 #E203 - whitespace before :
